@@ -1164,6 +1164,12 @@ The system can be re-made subsequently by just typing <code>make</code>.
     handle and enables the API mm_addregion(start, end);
   </li>
   <li>
+    <code>CONFIG_TICKS_PER_MSEC</code>: The default system timer is 100Hz
+    or <code>TICKS_PER_MSEC</code>=10.  This setting may be defined to inform NuttX
+    that the processor hardware is providing system timer interrupts at some interrupt
+    interval other than 10 msec.
+  </li>
+  <li>
     <code>CONFIG_RR_INTERVAL</code>: The round robin timeslice will be set
     this number of milliseconds;  Round robin scheduling can
     be disabled by setting this value to zero.
