@@ -107,6 +107,11 @@ CONFIG_UART1_2STOP=0
 #   handle and enables the API mm_addregion(start, end);
 # CONFIG_HAVE_LOWPUTC - architecture supports low-level, boot
 #   time console output
+# CONFIG_TICKS_PER_MSEC - The default system timer is 100Hz
+#   or TICKS_PER_MSEC=10.  This setting may be defined to
+#   inform NuttX that the processor hardware is providing
+#   system timer interrupts at some interrupt interval other
+#   than 10 msec.
 # CONFIG_RR_INTERVAL - The round robin timeslice will be set
 #   this number of milliseconds;  Round robin scheduling can
 #   be disabled by setting this value to zero.
